# -plataforma-de-entrenamiento-y-rehabilitacion

docker-compose/: docker-compose.yml
microservicios/auth-service/: .dockerignore  Dockerfile  main.py  pyproject.toml
microservicios/auth-service/app/: config.py  crud.py  database.py  models.py  security.py
microservicios/auth-service/app/api/routes/: routes.py
microservicios/auth-service/app/core/: config.py  database.py
microservicios/auth-service/app/domain/models/: models.py
microservicios/auth-service/app/domain/schemas/: schemas.py
microservicios/auth-service/app/repository/: crud.py
microservicios/auth-service/app/security/: security.py
microservicios/auth-service/app/services/: services.py
microservicios/biometric-service/: dockerfile  pyproject.toml
microservicios/biometric-service/app/: __init__.py  main.py
microservicios/biometric-service/app/api/: dependencies.py
microservicios/biometric-service/app/api/routers/: biometrics_routes.py
microservicios/biometric-service/app/core/: config.py  database.py
microservicios/biometric-service/app/domain/models/: models.py
microservicios/biometric-service/app/domain/schemas/: schemas.py
microservicios/biometric-service/app/repository/: bometric_repo.py
microservicios/biometric-service/app/servicies/: biometric_service.py  user_service.py
microservicios/exercises-sessions-service/: pyproject.toml
microservicios/exercises-sessions-service/app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py  session_service.py  user_client.py
microservicios/exercises-sessions-service/app/api/routes/: routes_exercise.py  routes_session.py  routes_sesson.py
microservicios/exercises-sessions-service/app/core/: config.py  database.py
microservicios/exercises-sessions-service/app/domain/models/: __init__.py  models.py
microservicios/exercises-sessions-service/app/domain/schemas/: schema_sesssion.py  schemas_exercise.py
microservicios/exercises-sessions-service/app/repository/: crud_exercise.py  crud_session.py
microservicios/exercises-sessions-service/app/services/: session_service.py  user_client.py
