[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Felipe Higuera <felipehiguera27@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"

fastapi = ">=0.116.1,<0.117.0"
uvicorn= ">=0.35.0,<0.36.0"
sqlmodel = "^0.0.24"
psycopg2-binary = {version = "2.9.9", extras = ["binary"]}
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
