[tool.poetry]
name = "performance-biometrics-service"
version = "0.1.0"
description = ""
authors = ["Felipe Higuera <felipehiguera27@gmail.com>"]
readme = "README.md"
package-mode = false




[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.10"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.18"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.11.7"
httpx = "^0.28.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
